src/index.css
/* ... */
.skill-card,
.testimonial-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    height: 100%;
}

.skill-card p {
    margin-top: 8px;
    color: #fff;
    text-align: center;
}

.skills-swiper .swiper-slide .skill-card img {
    width: 200px;
    height: auto;
    object-fit: contain;
    object-position: center;
    transition: all 0.3s ease-out;
}

/* .testimonial-swiper .swiper-slide .testimonial-card {
    width: fit-content !important;
} */

.skills-swiper .swiper-slide-active .skill-card img,
.testimonial-swiper .swiper-slide-active .testimonial-card {
    transform: scale(1.2);
}

.skills-swiper .swiper-slide-next .skill-card img,
.skills-swiper .swiper-slide-prev .skill-card img,
.testimonial-swiper .swiper-slide-next .testimonial-card,
.testimonial-swiper .swiper-slide-prev .testimonial-card {
    transform: scale(0.8);
    transition: all 0.3s ease-out;
}

.skills-swiper .swiper-slide-next .skill-card,
.skills-swiper .swiper-slide-prev .skill-card,
.testimonial-swiper .swiper-slide-next .testimonial-card,
.testimonial-swiper .swiper-slide-prev .testimonial-card {
    opacity: 0.8;
    transition: all 0.3s ease-out;
}

.skills-swiper .swiper-slide-active .skill-card p {
    font-size: 18px;
    padding: 0 10px;
}

.skills-swiper .swiper-slide-next .skill-card p,
.skills-swiper .swiper-slide-prev .skill-card p,
.skills-swiper .swiper-slide:not(.swiper-slide-active):not(.swiper-slide-next):not(.swiper-slide-prev) .skill-card p {
    font-size: 14px;
}

.skills-swiper .swiper-slide:not(.swiper-slide-active):not(.swiper-slide-next):not(.swiper-slide-prev) .skill-card {
    opacity: 0.5;
    transition: all 0.3s ease-out;
    position: relative;
}

.skills-swiper .swiper-slide:not(.swiper-slide-active):not(.swiper-slide-next):not(.swiper-slide-prev) .skill-card img,
.testimonial-swiper .swiper-slide:not(.swiper-slide-active):not(.swiper-slide-next):not(.swiper-slide-prev) .testimonial-card {
    transform: scale(0.6);
    transition: all 0.3s ease-out;
    position: relative;
}

.testimonial-swiper {
    padding: 15px 0 100px 0 !important;
}

/* .skills-swiper .swiper-slide:not(.swiper-slide-active):not(.swiper-slide-next):not(.swiper-slide-prev) .skill-card:before {
    position: absolute;
    z-index: 1;
    content: "";
    height: 100%;
    width: 100%;
    background: linear-gradient(to right, #00000000, #000000);
} */
.skills-slider-wrapper,
.skills-swiper {
    overflow: hidden !important;
}

.skills-swiper .swiper-button-prev,
.skills-swiper .swiper-button-next {
    background-color: transparent;
    border: none;
    color: #ffffff;
    padding: 5px;
}

.skills-swiper .swiper-button-prev {
    left: -8px;
}

.skills-swiper .swiper-button-next {
    right: -8px;
}

/* tools */
.tools_slider_section {
    padding-bottom: 150px;
}

.tools_swiper {
    width: 100%;
    padding: 50px 0 !important;
}

.tools_swiper .swiper-slide {
    display: flex !important;
    justify-content: center;
}

.tool_card {
    background: #000000;
    border-radius: 20px;
    width: 180px;
    height: 250px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    transition: all 0.35s ease;
}

.tool_card img {
    width: 75%;
    height: auto;
    object-fit: contain;
    margin-bottom: 12px;
}

.tool_name_parent {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0px;
    z-index: 1;
    margin: auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.tool_name_parent .curve {
    z-index: -1;
    bottom: -48px;
    position: absolute;
    height: 190px;
    width: 270px;
    border-radius: 50%;
    background: #000000;
    margin: auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.tool-name-display {
    height: 130px;
    width: 130px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 0px 4.07px 8.14px 8.14px #00000040 inset;
}

.tool_card.active {
    transform: scale(1.25);
    z-index: 10;
}

.tool_nav_btn {
    background-color: transparent;
    border: none;
    color: #ffffff;
    font-size: 20px;
}

/* all bullets hidden by default */
.testimonial-swiper .swiper-pagination-bullet {
    display: none;
}

/* show active bullet */
.testimonial-swiper .swiper-pagination-bullet-active {
    display: inline-block;
}

/* show prev bullet */
.testimonial-swiper .swiper-pagination-bullet-active-prev {
    display: inline-block;
}

/* show next bullet */
.testimonial-swiper .swiper-pagination-bullet-active-next {
    display: inline-block;
}

/* optional styling */
.custom-bullet {
    width: 10px;
    height: 10px;
    background: #fff;
    border-radius: 50%;
    margin: 0 4px;
    opacity: 0.5;
    transition: opacity 0.3s;
}

.swiper-pagination-bullet-active {
    opacity: 1;
}

.swiper-slide {
    /* opacity: .5; */
    transition: opacity 0.3s ease;
}

.swiper-slide-active {
    /* opacity: 1; */
}

/* tools - end */
/* module - start */
.modules-section {
    position: relative;
}

.modules-section .section_container {
    padding-top: 90px;
}

.tabs-wrapper {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 25px;
    padding-bottom: 260px;
    /* <-- prevents overlap */
}

.tabs {
    background: #000;
    display: inline-flex;
    gap: 20px;
    padding: 10px 25px;
    border-radius: 30px;
    position: relative;
}

.tab {
    background: none;
    border: none;
    color: #fff;
    padding: 5px 5px;
    cursor: pointer;
    font-size: 14px;
    font-weight: 500;
    position: relative;
    transition: 0.2s;
}

.tab.active {
    color: #fff;
    font-weight: 600;
}

.tab:hover {
    color: var(--c2);
}
/* ... */

